Updated styling to fix break at small res

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -132,9 +132,8 @@ input {
   font-size: 14px;
 }
 
-.standard_list_right {
-  float: left;
-  width: 55%;
+.standard_list {
+  width: 100%;
   list-style: none;
   padding: 0;
   font-size: 14px;
@@ -148,13 +147,21 @@ input {
   height: 20px;
 }
 
-.standard_list_right li {
+.standard_list li {
   text-align: right;
   padding: 20px 16px 0 0;
-  margin: 10px 10% 10px 0;
+  margin: 10px 0;
   background: #fff;
   height: 40px;
   position: relative;
+
+  span {
+    padding: 0 20px;
+    background: #fff;
+    color: #980921;
+    height: 20px;
+    float: left;
+  }
 }
 
 .standard_list_left_full {
@@ -299,10 +306,10 @@ button {
   background: #fff;
   border: 1px solid #960D24;
   float: right;
-  margin: 2% 0;
+  margin: 1% 0;
   overflow: hidden;
   position: relative;
-  width: 280px;
+  width: 54%;
 
   select {
     border: none;
@@ -673,17 +680,27 @@ label.css-label {
   }
 }
 
-#horse_info input, input[type="date"], #feeding_records input, #stable_info input {
+#horse_info label, input[type="date"], #feeding_records label, #stable_info label, #documents label {
+  padding: 0 20px;
+  background: #fff;
+  color: #980921;
+  height: 20px;
+  float: left;
+}
+
+#horse_info input, input[type="date"], #feeding_records input, #stable_info input, #documents input {
   text-align: right;
   -webkit-appearance: none;
   border-radius: 0;
   -webkit-border-radius: 0;
-  margin: 2%;
-  width: 80%;
+  margin: 1%;
+  width: 50%;
   color: #333;
   background: #F0F0EF;
   padding: 10px;
   border: 1px solid #E1E1DD;
+  float: right;
+  text-align: left;
 }
 
 form#account_settings input, .state {
